<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/primaryBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".page.login.LoginActivity"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="24sp"
            android:fontFamily="@font/san_fransisco_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/tf_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:text="@string/username"
                android:fontFamily="@font/san_fransisco_bold"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:drawableTint="@color/primary"
                android:textColorHighlight="@color/primary"
                android:padding="16dp"
                android:textSize="14sp"
                android:fontFamily="@font/san_fransisco_regular"
                android:layout_height="wrap_content"
                android:hint="@string/username_placeholder"
                android:inputType="text"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/tf_email"
            app:layout_constraintTop_toBottomOf="@+id/tf_username"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:text="@string/email"
                android:fontFamily="@font/san_fransisco_bold"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/baseline_alternate_email_24"
                android:drawableTint="@color/primary"
                android:textSize="14sp"
                android:fontFamily="@font/san_fransisco_regular"
                android:layout_height="60dp"
                android:hint="@string/email_placeholder"
                android:paddingHorizontal="16dp"
                android:inputType="textEmailAddress"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tf_password"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tf_email"
            tools:layout_editor_absoluteX="0dp"
            android:gravity="center_vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:fontFamily="@font/san_fransisco_bold"/>

            <com.archico.storyapp.customview.MyEditText
                android:id="@+id/ed_register_password"
                android:textSize="14sp"
                android:fontFamily="@font/san_fransisco_regular"
                android:inputType="textPassword"
                android:hint="@string/password_placeholder"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="">
            </com.archico.storyapp.customview.MyEditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tf_password"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:textColor="@color/white"
                android:fontFamily="@font/san_fransisco_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:text="@string/account_exist"
                    android:fontFamily="@font/san_fransisco_regular"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/hypl_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="@string/login_hyperlink"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:fontFamily="@font/san_fransisco_bold"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
