<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/primaryBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".page.add.AddStoryActivity"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/add_image"
            android:fontFamily="@font/sf_pro_bold"
            android:textColor="?attr/colorPrimary"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_empty_image"
                android:contentDescription="@string/image"/>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gallery"
                android:fontFamily="@font/sf_pro_regular"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary"
                android:layout_marginEnd="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera"
                android:fontFamily="@font/sf_pro_regular"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:id="@+id/descriptionTextfieldLayout"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:fontFamily="@font/sf_pro_bold"
                android:textStyle="bold"
                android:text="@string/description_title" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/ed_description"
                android:layout_marginTop="16dp"
                android:drawablePadding="16dp"
                android:lines="8"
                android:fontFamily="@font/sf_pro_regular"
                android:textColorHighlight="@color/primary"
                android:textColorLink="?attr/colorPrimary"
                style="@style/cardViewContainerBackground"
                android:textSize="14sp"
                android:gravity="top|start"
                android:scrollbars="vertical"
                android:padding="16sp"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:hint="@string/desc_placeholder"
                android:inputType="textMultiLine"
                android:background="@drawable/shp_rounded_background"
                android:autofillHints="">
            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/button_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_your_location"
                android:fontFamily="@font/sf_pro_regular"
                android:drawableTint="@color/primary"/>
            <fragment
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:visibility="gone"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="16dp"
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            android:layout_marginBottom="32dp"
            app:cornerRadius="50dp"/>

    </LinearLayout>
</ScrollView>
