<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".page.settings.SettingsActivity"
    style="@style/primaryBackground"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/san_fransisco_bold"
        android:text="@string/settings"
        android:textAlignment="textStart"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tv"
        app:layout_constraintStart_toStartOf="@+id/tv"
        app:layout_constraintTop_toBottomOf="@+id/tv">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swtch_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/san_fransisco_regular"
            app:thumbTint="@color/primary"
            app:trackTint="@color/grey" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swtch_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/darkmode"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/san_fransisco_regular"
            app:thumbTint="@color/primary"
            app:trackTint="@color/grey" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:fontFamily="@font/san_fransisco_regular"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>